GPF-1721 clean up

--- a/mypy.ini
+++ b/mypy.ini
@@ -37,3 +37,6 @@ ignore_missing_imports = True
 
 [mypy-deprecation.*]
 ignore_missing_imports = True
+
+[mypy-networkx.*]
+ignore_missing_imports = True
