Reorganization to using genotype storage extention point.
Reorganization of genotype storage configuration and clean
up of creation of genotype storages.
Extension point for genotype storages added and functions
to load genotype storage extensions.

--- a/dae/dae/common_reports/tests/fixtures/gpf_instance.yaml
+++ b/dae/dae/common_reports/tests/fixtures/gpf_instance.yaml
@@ -10,9 +10,9 @@ gene_models:
 genotype_storage:
   default: genotype_filesystem
 
-storage:
+  storages:
 
-  genotype_filesystem:
+  - id: genotype_filesystem
     dir: "studies"
     storage_type: filesystem
 
