--- a/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
@@ -10,78 +10,78 @@ gene_models:
 genotype_storage:
   default: genotype_filesystem
 
-storage:
+  storages:
+    - id: genotype_impala
+      storage_type: impala
+      dir: "work/"
+      hdfs:
+        base_dir: /tmp/test_data
+        host: localhost
+        port: 8020
+        replication: 1
+      impala:
+        db: "impala_storage_test_db"
+        hosts:
+        - localhost
+        pool_size: 3
+        port: 21050
 
-  genotype_impala:
-    storage_type: impala
-    dir: "work/"
-    hdfs:
-      base_dir: /tmp/test_data
-      host: localhost
-      port: 8020
-      replication: 1
-    impala:
-      db: "impala_storage_test_db"
-      hosts:
-      - localhost
-      pool_size: 3
-      port: 21050
+    - id: genotype_impala_2
+      storage_type: impala2
+      schema_version: 2
+      hdfs:
+        base_dir: /user/schema2_tests/studies
+        host: localhost
+        port: 8020
+        replication: 1
+      impala:
+        db: schema2
+        hosts:
+        - localhost
+        pool_size: 3
+        port: 21050
 
-  genotype_impala_2:
-    hdfs:
-      base_dir: /user/schema2_tests/studies
-      host: localhost
-      port: 8020
-      replication: 1
-    impala:
-      db: schema2
-      hosts:
-      - localhost
-      pool_size: 3
-      port: 21050
-    storage_type: impala
-    schema_version: 2
+    - id: genotype_impala_backends
+      storage_type: impala
+      dir: /tmp/test_impala/studies
+      hdfs:
+        base_dir: /tmp/test_data
+        host: localhost
+        port: 8020
+        replication: 1
+      impala:
+        db: impala_test_db
+        hosts:
+        - localhost
+        pool_size: 1
+        port: 21050
 
-  genotype_impala_backends:
-    storage_type: impala
-    dir: /tmp/test_impala/studies
-    hdfs:
-      base_dir: /tmp/test_data
-      host: localhost
-      port: 8020
-      replication: 1
-    impala:
-      db: impala_test_db
-      hosts:
-      - localhost
-      pool_size: 1
-      port: 21050
+    - id: genotype_filesystem
+      dir: studies
+      storage_type: filesystem
 
-  genotype_filesystem:
-    dir: "studies"
-    storage_type: filesystem
+    - id: genotype_filesystem2
+      dir: data_dir
+      storage_type: filesystem
 
-  genotype_filesystem2:
-    dir: "data_dir"
-    storage_type: filesystem
+    - id: test_filesystem
+      dir: /tmp/test_filesystem/studies
+      storage_type: filesystem
 
-  test_filesystem:
-    dir: /tmp/test_filesystem/studies
-    storage_type: filesystem
-  test_impala:
-    dir: /tmp/test_impala/studies
-    hdfs:
-      base_dir: /user/test_impala/studies
-      host: localhost
-      port: 8020
-      replication: 1
-    impala:
-      db: test_impala
-      hosts:
-      - localhost
-      pool_size: 1
-      port: 21050
-    storage_type: impala
+    - id: test_impala
+      dir: /tmp/test_impala/studies
+      hdfs:
+        base_dir: /user/test_impala/studies
+        host: localhost
+        port: 8020
+        replication: 1
+      impala:
+        db: test_impala
+        hosts:
+        - localhost
+        pool_size: 1
+        port: 21050
+      storage_type: impala
 
 remotes:
   - id: "TEST_REMOTE"
