GPF-1741 Move pip dependency to environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -51,5 +51,6 @@ dependencies:
   - tqdm=4.64.0
   - snakeobjects=3.1.1
   - google-cloud-bigquery=3.2.0
+  - pip=21.3.1
   - pip:
     - django-oauth-toolkit==2.1.0
