--- a/mypy.ini
+++ b/mypy.ini
@@ -29,6 +29,12 @@ ignore_missing_imports = True
 [mypy-dask.distributed.*]
 ignore_missing_imports = True
 
+[mypy-dask.*]
+ignore_missing_imports = True
+
+[mypy-dask_sql.*]
+ignore_missing_imports = True
+
 [mypy-rest_framework]
 ignore_missing_imports = True
 
@@ -39,4 +45,10 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-networkx.*]
+ignore_missing_imports = True
+
+[mypy-impala.*]
+ignore_missing_imports = True
+
+[mypy-cerberus.*]
 ignore_missing_imports = True
