--- a/dae/dae/common_reports/tests/fixtures/gpf_instance.yaml
+++ b/dae/dae/common_reports/tests/fixtures/gpf_instance.yaml
@@ -13,7 +13,7 @@ genotype_storage:
   storages:
 
   - id: genotype_filesystem
-    dir: "studies"
+    dir: "/tmp/studies"
     storage_type: filesystem
 
 phenotype_data:
