GPF-1801 Fix study configs

--- a/dae/dae/common_reports/tests/fixtures/studies/Study1/test.conf
+++ b/dae/dae/common_reports/tests/fixtures/studies/Study1/test.conf
@@ -12,7 +12,7 @@ enabled = true
 [genotype_storage]
 id = "genotype_filesystem"
 files.pedigree.path = "data/Study1.ped"
-files.pedigree.params = {ped_file_format = "pedigree", ped_tags = true}
+files.pedigree.params = {ped_file_format = "pedigree", ped_tags = "true"}
 
 [[genotype_storage.files.variants]]
 path = "data/Study1.vcf"
