--- a/dae_conftests/dae_conftests/tests/fixtures/studies/Study1/test.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/Study1/test.conf
@@ -9,7 +9,7 @@ selected_person_set_collections = ["phenotype", "status"]
 [genotype_storage]
 id = "genotype_filesystem"
 files.pedigree = { path = "data/Study1.ped" }
-files.pedigree.params = {ped_file_format = "pedigree", ped_tags = true}
+files.pedigree.params = {ped_file_format = "pedigree", ped_tags = "true"}
 
 [[genotype_storage.files.variants]]
 path = "data/Study1.vcf"
