GPF-1801 Update study configurations and scripts

--- a/dae_conftests/dae_conftests/tests/fixtures/studies/comp/comp.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/comp/comp.conf
@@ -20,8 +20,8 @@ pedigree.params.ped_dad = "dadId"
 pedigree.params.ped_sex = "sex"
 pedigree.params.ped_status = "status"
 pedigree.params.ped_role = "role"
-pedigree.params.ped_no_role = "false"
-pedigree.params.ped_no_header = "false"
+pedigree.params.ped_no_role = false
+pedigree.params.ped_no_header = false
 pedigree.params.ped_file_format = "pedigree"
 pedigree.params.ped_layout_mode = "load"
 pedigree.params.ped_sep = "\t"
