--- a/dae/pytest.ini
+++ b/dae/pytest.ini
@@ -2,4 +2,6 @@
 markers =
     fixture_repo: marks tests that use the fixture_repo (deselect with '-m "not fixture_repo"')
     internet: marks tests that depend on having an internet conenction (deselect with '-m "not fixture_repo"')
-
+    impala: mark test to run only for impala genotype storage
+    impala2: mark test to run only for impala2 genotype storage
+    filesystem: mark test to run only for filesystem genotype storage
