--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ warn_redundant_casts = True
 [mypy-matplotlib.*]
 ignore_missing_imports = True
 
-[mypy-pysam]
+[mypy-pysam.*]
 ignore_missing_imports = True
 
 [mypy-lark.*]
