Rename `filesystem` genotype storage to `inmemory` genotype storage.
Some package and module reorganization to reflect the renaming.
WIP #234.

--- a/dae/dae/common_reports/tests/fixtures/gpf_instance.yaml
+++ b/dae/dae/common_reports/tests/fixtures/gpf_instance.yaml
@@ -14,7 +14,7 @@ genotype_storage:
 
   - id: genotype_filesystem
     dir: "/tmp/studies"
-    storage_type: filesystem
+    storage_type: inmemory
 
 phenotype_data:
   dir: "dummy_pheno_dir"
