--- a/dae/pytest.ini
+++ b/dae/pytest.ini
@@ -4,4 +4,4 @@ markers =
     internet: marks tests that depend on having an internet conenction (deselect with '-m "not fixture_repo"')
     impala: mark test to run only for impala genotype storage
     impala2: mark test to run only for impala2 genotype storage
-    filesystem: mark test to run only for filesystem genotype storage
+    inmemory: mark test to run only for inmemory genotype storage
