Fix unstable gpf instance plugin provider test.
Configure fixture GPF instance to use short hg19 genome and genes.
Clean up dae_conftest GPF instances.
WIP #238.

--- a/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
@@ -2,10 +2,21 @@ vars:
   instance_id: test_data
 
 reference_genome:
-  resource_id: "hg19/genomes/GATK_ResourceBundle_5777_b37_phiX174"
+  resource_id: "hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome"
 
 gene_models:
-  resource_id: "hg19/gene_models/refGene_v20190211"
+  resource_id: "hg19/GATK_ResourceBundle_5777_b37_phiX174_short/gene_models/refGene_201309"
+
+grr:
+  id: test_grr
+  type: group
+  children:
+  - id: fixtures_grr
+    type: dir
+    directory: "%(wd)s/genomic_resources"
+  - id: seqpipe
+    type: url
+    url: "https://grr.seqpipe.org"
 
 genotype_storage:
   default: genotype_filesystem
