--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -37,6 +37,7 @@ dependencies:
   - types-requests=2.27.30
   - dask-jobqueue=0.7.3
   - bandit=1.7.4
+  - pip=22.3.1
   - pip:
     - sphinx-autorun==1.1.1
     - sphinx-copybutton==0.5.0
