--- a/environment.yml
+++ b/environment.yml
@@ -35,9 +35,10 @@ dependencies:
   - setuptools=65.0.1
   - sqlalchemy=1.4.40
   - sqlite=3.39.2
-  - django==4.1
+  - django=4.1.3
   - django-cors-headers=3.13.0
   - djangorestframework=3.13.1
+  - django-oauth-toolkit=2.2.0
   - openjdk=8.0.312
   - hadoop=3.1.2
   - deprecation=2.1.0
@@ -49,8 +50,3 @@ dependencies:
   - dask=2022.7.1
   - dask-kubernetes=2022.7.0
   - tqdm=4.64.0
-  - snakeobjects=3.1.1
-  - google-cloud-bigquery=3.2.0
-  - pip=21.3.1
-  - pip:
-    - django-oauth-toolkit==2.1.0
