--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python==3.10.4
+python==3.9.12
 importlib_metadata==4.11.3
 pysam==0.19.1
 samtools==1.15.1
@@ -22,9 +22,10 @@ python-box==6.0.2
 setuptools==65.0.1
 sqlalchemy==1.4.40
 sqlite==3.39.2
-django==4.1
+django==4.1.3
 django-cors-headers==3.13.0
 djangorestframework==3.13.1
+django-oauth-toolkit==2.2.0
 openjdk==8.0.312
 hadoop==3.1.2
 deprecation==2.1.0
@@ -36,8 +37,6 @@ ijson==3.1.4
 dask==2022.7.1
 dask-kubernetes==2022.7.0
 tqdm==4.64.0
-snakeobjects==3.1.1
-google-cloud-bigquery==3.2.0
 bump2version==1.0.1
 sphinx==4.5.0
 sphinx_rtd_theme==1.0.0
@@ -48,11 +47,11 @@ flake8==4.0.1
 flake8-quotes==3.3.1
 flake8-docstrings==1.6.0
 mypy==0.931
-pytest==7.1.2
-pytest-cov==3.0.0
-pytest-mock==3.7.0
+pytest==7.1.3
+pytest-cov==4.0.0
+pytest-mock==3.10.0
 pytest-django==4.5.2
-pytest-doctestplus==0.12.0
+pytest-doctestplus==0.12.1
 pylint==2.13.8
 werkzeug==2.1.2
 moto==3.1.16
@@ -66,6 +65,8 @@ types-python-dateutil==2.8.9
 types-requests==2.27.30
 dask-jobqueue==0.7.3
 bandit==1.7.4
-pip==21.3.1
+pip==22.3.1
 sphinx-autorun===1.1.1
+sphinx-copybutton===0.5.0
+sphinx-rtd-theme===1.0.0
 rangehttpserver===1.2.0
