Gene scores column renamed from `scores` to `gene_scores`.

--- a/dae_conftests/dae_conftests/tests/fixtures/defaultConfiguration.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/defaultConfiguration.conf
@@ -21,20 +21,20 @@ has_pedigree_selector = false
 has_graphical_preview = true
 
 preview_columns = [
-    "family", "variant", "genotype", "effect", "scores", "freq", "effect"
+    "family", "variant", "genotype", "effect", "gene_scores", "freq", "effect"
 ]
 
 download_columns = [
     "family", "phenotype", "variant", "best", "fromparent", "inchild", "effect",
-    "count", "geneeffect", "effectdetails", "scores", "freq"
+    "count", "geneeffect", "effectdetails", "gene_scores", "freq"
 ]
 
 summary_preview_columns = [
-    "variant", "effect", "scores", "mpc_cadd", "freq"
+    "variant", "effect", "gene_scores", "mpc_cadd", "freq"
 ]
 
 summary_download_columns = [
-    "variant", "effect", "geneeffect", "effectdetails", "scores", "freq"
+    "variant", "effect", "geneeffect", "effectdetails", "gene_scores", "freq"
 ]
 
 [genotype_browser.columns.genotype]
@@ -96,8 +96,8 @@ pli_rank.format="pLI %%d"
 effect.name = "effect"
 effect.columns = ["worst_effect", "genes"]
 
-scores.name = "vulnerability/intolerance"
-scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
+gene_scores.name = "vulnerability/intolerance"
+gene_scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
 
 family.name = "family"
 family.columns = ["family_id", "study"]
