--- a/dae_conftests/dae_conftests/tests/fixtures/studies/inheritance_trio/inheritance_trio.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/inheritance_trio/inheritance_trio.conf
@@ -79,8 +79,8 @@ freq.columns = ["ssc_freq", "evs_freq", "e65_freq"]
 effect.name = "effect"
 effect.columns = ["worst_effect", "genes"]
 
-scores.name = "vulnerability/intolerance"
-scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
+gene_scores.name = "vulnerability/intolerance"
+gene_scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
 
 family.name = "family"
 family.columns = ["family_id", "study"]
