--- a/dae_conftests/dae_conftests/tests/fixtures/studies/quads_f1/quads_f1.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/quads_f1/quads_f1.conf
@@ -27,22 +27,22 @@ has_family_filters = false
 has_pedigree_selector = true
 
 preview_columns = [
-    "family", "variant", "genotype", "effect", "scores", "freq", "effect",
+    "family", "variant", "genotype", "effect", "gene_scores", "freq", "effect",
     "continuous", "categorical", "ordinal", "raw"
 ]
 
 download_columns = [
     "family", "phenotype", "variant", "best", "fromparent", "inchild", "effect",
-    "count", "geneeffect", "effectdetails", "scores", "freq", "continuous", "categorical", "ordinal", "raw"
+    "count", "geneeffect", "effectdetails", "gene_scores", "freq", "continuous", "categorical", "ordinal", "raw"
 ]
 
 summary_preview_columns = [
-    "variant", "effect", "scores", "freq", "effect",
+    "variant", "effect", "gene_scores", "freq", "effect",
     "continuous", "categorical", "ordinal", "raw"
 ]
 
 summary_download_columns = [
-    "variant", "effect", "scores", "freq", "effect",
+    "variant", "effect", "gene_scores", "freq", "effect",
     "geneeffect", "effectdetails", "continuous",
     "categorical", "ordinal", "raw"
 ]
@@ -124,8 +124,8 @@ freq.columns = ["ssc_freq", "evs_freq", "e65_freq"]
 effect.name = "effect"
 effect.columns = ["worst_effect", "genes"]
 
-scores.name = "vulnerability/intolerance"
-scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
+gene_scores.name = "vulnerability/intolerance"
+gene_scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
 
 family.name = "family"
 family.columns = ["family_id", "study"]
