--- a/integration/remote/data/defaultConfiguration.conf
+++ b/integration/remote/data/defaultConfiguration.conf
@@ -78,7 +78,7 @@ preview_columns = [
 	"variant",
 	"genotype",
 	"effect",
-	"scores",
+	"gene_scores",
 	"mpc_cadd",
 	"freq"
 ]
@@ -100,7 +100,7 @@ download_columns = [
 	"effect",
 	"geneeffect",
 	"effectdetails",
-	"scores",
+	"gene_scores",
 	"cadd_raw",
 	"cadd_phred",
 	"mpc",
@@ -110,15 +110,15 @@ download_columns = [
 	"exome_gnomad_af_percent"
 ]
 
-summary_preview_columns = ["variant", "effect", "scores", "mpc_cadd", "freq"]
-summary_download_columns = ["variant", "effect", "scores", "mpc_cadd", "freq"]
+summary_preview_columns = ["variant", "effect", "gene_scores", "mpc_cadd", "freq"]
+summary_download_columns = ["variant", "effect", "gene_scores", "mpc_cadd", "freq"]
 
 [genotype_browser.column_groups]
 effect.name = "effect"
 effect.columns = ["worst_effect", "genes"]
 
-scores.name = "vulnerability/intolerance"
-scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
+gene_scores.name = "vulnerability/intolerance"
+gene_scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
 
 family.name = "family"
 family.columns = ["family_id", "study"]
