--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ license_file = LICENSE
 universal = 1
 
 [flake8]
-exclude = old,*tmp*,*temp*,data-hg19*,build,docs
+exclude = old,*tmp*,*temp*,data-hg19*,build,docs,migrations
 max-complexity = 15
 inline-quotes=double
 docstring-quotes=double
