mypy: turn check_untyped_defs off

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,9 @@
 [mypy]
 warn_return_any = True
 warn_redundant_casts = True
+check_untyped_defs = False
+# disable notes messages for not checking untyped defs. Remove this if you set check_untyped_defs to True.
+disable_error_code = annotation-unchecked
 
 [mypy-matplotlib.*]
 ignore_missing_imports = True
