Restore usage of seaborn library.
The seaborn library is actively maintained. So we can get rid of
our copy of the violin and strip plots.

--- a/mypy.ini
+++ b/mypy.ini
@@ -55,3 +55,6 @@ ignore_missing_imports = True
 
 [mypy-cerberus.*]
 ignore_missing_imports = True
+
+[mypy-seaborn.*]
+ignore_missing_imports = True
