--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
   - scipy=1.9.0
   - scikit-learn=1.1.2
   - matplotlib-base=3.5.1
+  - seaborn=0.12.1
   - pandas=1.4.3
   - pyarrow=8.0.1
   - aiohttp=3.8.1
