--- a/environment.yml
+++ b/environment.yml
@@ -41,7 +41,6 @@ dependencies:
   - djangorestframework=3.13.1
   - django-oauth-toolkit=2.2.0
   - openjdk=8.0.312
-  - hadoop=3.1.2
   - deprecation=2.1.0
   - toml=0.10.2
   - cerberus=1.3.4
@@ -52,3 +51,5 @@ dependencies:
   - dask-kubernetes=2022.12.0
   - tqdm=4.64.0
   - markdown2=2.4.0
+  # comment when on mac
+  - hadoop=3.1.2
