Annotation pipeline changed to filter out internal attributes.
Tests are adjusted with this change.

--- a/dae_conftests/dae_conftests/tests/fixtures/annotation_pipeline/import_annotation.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/annotation_pipeline/import_annotation.yaml
@@ -5,7 +5,7 @@
     attributes:
     - source: allele_effects
       destination: allele_effects
-      internal: true
+      internal: false
 
 
 - position_score: hg19/internal/scores1
