--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,15 @@ numpy==1.23.1
 scipy==1.9.0
 scikit-learn==1.1.2
 matplotlib-base==3.5.1
-pandas==1.4.3
-pyarrow==8.0.1
-aiohttp==3.8.1
-fsspec==2022.7.1
-s3fs==2022.7.1
+seaborn==0.12.1
+pandas==1.5.2
+pyarrow==10.0.1
+aiohttp==3.8.3
+fsspec==2022.11.0
+s3fs==2022.11.0
 pyliftover==0.4
 python-box==6.0.2
-setuptools==65.0.1
+setuptools==65.6.3
 sqlalchemy==1.4.40
 sqlite==3.39.2
 django==4.1.3
@@ -32,38 +33,38 @@ deprecation==2.1.0
 toml==0.10.2
 cerberus==1.3.4
 jinja2==3.1.2
-snakemake-minimal==7.12.1
+snakemake-minimal==7.18.2
 ijson==3.1.4
-dask==2022.7.1
-dask-kubernetes==2022.7.0
+dask==2022.12.0
+dask-kubernetes==2022.12.0
 tqdm==4.64.0
+markdown2==2.4.0
 bump2version==1.0.1
-sphinx==4.5.0
-sphinx_rtd_theme==1.0.0
+sphinx==5.3.0
+sphinx_rtd_theme==1.1.1
 sphinx-copybutton==0.5.0
-sphinxcontrib-httpdomain==1.8.0
-coverage==6.3.2
-flake8==4.0.1
+sphinxcontrib-httpdomain==1.8.1
+coverage==6.5.0
+flake8==5.0.4
 flake8-quotes==3.3.1
 flake8-docstrings==1.6.0
-mypy==0.931
+mypy==0.991
 pytest==7.1.3
 pytest-cov==4.0.0
 pytest-mock==3.10.0
 pytest-django==4.5.2
 pytest-doctestplus==0.12.1
-pylint==2.13.8
-werkzeug==2.1.2
-moto==3.1.16
-pandas-stubs==1.2.0.58
-django-stubs==1.10.1
-types-pyyaml==6.0.7
-types-setuptools==57.4.14
+pylint==2.15.7
+moto==4.0.11
+pandas-stubs==1.5.2.221124
+django-stubs==1.13.0
+types-pyyaml==6.0.12.2
+types-setuptools==65.6.0.2
 sqlalchemy-stubs==0.4
 types-toml==0.10.3
 types-python-dateutil==2.8.9
 types-requests==2.27.30
-dask-jobqueue==0.7.3
+dask-jobqueue==0.8.1
 bandit==1.7.4
 pip==22.3.1
 sphinx-autorun===1.1.1
