--- a/dae/dae/dask/named_cluster.yaml
+++ b/dae/dae/dask/named_cluster.yaml
@@ -1,18 +1,41 @@
 dae_named_cluster:
   default: local
   clusters:
-    - name: local 
+    - name: local
       type: local
-    - name: sge_quick 
+      # By default, the local cluster will allocate by default as many threads 
+      # as the number of cores on the host, spread accross several workers each
+      # with cerain number of threads.  See the documentation of LocalCluster
+      # for more information. 
+      # To set the default a number of threads we can set:
+      # number_of_threads: 10
+      #
+      # If present, the params will be provided to the LocalCluster 
+      # constructor. Some usefull params are given, but the LocalCluster 
+      # documentation provides the complete description.
+      # params:
+      #  threads_per_worker: 1
+      #   dashboard_address: :8898
+    - name: sge_small
       type: sge
+      number_of_threads: 10
       params:
+        scheduler_options:
+          dashboard_address: :8898
         cores: 1
         memory: 1GB
-    - name: slurm
-      type: slurm
+        log_directory: ./sge_worker_logs
+    - name: sge_large
+      type: sge
+      adapt_params:
+        minimum: 3
+        maximum: 200
       params:
+        scheduler_options:
+          dashboard_address: :8898
         cores: 1
-        memory: 1GB
+        memory: 10GB
+        log_directory: ./sge_worker_logs
     - name: kubernetes
       type: kubgernetes
       params:
@@ -23,5 +46,12 @@ dae_named_cluster:
         envvars: 
           - PATH
           - MY_ENV
+    - name: slurm
+      type: slurm
+      number_of_threads: 10
+      params:
+        cores: 1
+        memory: 1GB
+        log_directory: ./slurm_worker_logs
 
 
