Mop-up lint errors.

--- a/mypy.ini
+++ b/mypy.ini
@@ -56,6 +56,9 @@ ignore_missing_imports = True
 [mypy-cerberus.*]
 ignore_missing_imports = True
 
+[mypy-markdown2.*]
+ignore_missing_imports = True
+
 [mypy-seaborn.*]
 ignore_missing_imports = True
 
