Fix linting errors.
The original commit was cherry picked with some minor fixes.

--- a/mypy.ini
+++ b/mypy.ini
@@ -32,10 +32,16 @@ ignore_missing_imports = True
 [mypy-dask.distributed.*]
 ignore_missing_imports = True
 
+[mypy-dask_kubernetes.*]
+ignore_missing_imports = True
+
 [mypy-dask.*]
 ignore_missing_imports = True
 
 [mypy-dask_sql.*]
+ignore_missing_imports = True
+
+[mypy-dask_jobqueue.*]
 ignore_missing_imports = True
 
 [mypy-rest_framework]
