sphinx: add package for video support

--- a/requirements.txt
+++ b/requirements.txt
@@ -71,3 +71,4 @@ sphinx-autorun===1.1.1
 sphinx-copybutton===0.5.0
 sphinx-rtd-theme===1.0.0
 rangehttpserver===1.2.0
+sphinxcontrib-video===0.0.1.dev3
