--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -41,3 +41,4 @@ dependencies:
     - sphinx-copybutton==0.5.0
     - sphinx-rtd-theme==1.0.0
     - rangehttpserver==1.2.0
+    - sphinxcontrib-video==0.0.1.dev3
