--- a/environment.yml
+++ b/environment.yml
@@ -49,7 +49,7 @@ dependencies:
   - ijson=3.1.4
   - dask=2022.12.0
   - dask-kubernetes=2022.12.0
-  - tqdm=4.64.0
+  - toolz=0.12.0
   - markdown2=2.4.0
   # comment when on mac
   - hadoop=3.1.2
