--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -10,6 +10,7 @@ channels:
 dependencies:
   - dask-jobqueue=0.8.1
   - dask-kubernetes=2022.12.0
+  - raven=6.10.0
   - bump2version=1.0.1
   - sphinx=5.3.0
   - sphinx_rtd_theme=1.1.1
