--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -9,25 +9,25 @@ channels:
   - iossifovlab
 dependencies:
   - dask-jobqueue=0.8.1
-  - dask-kubernetes=2022.12.0
+  - dask-kubernetes=2023.3
   - raven=6.10.0
   - bump2version=1.0.1
-  - sphinx=5.3.0
-  - sphinx_rtd_theme=1.1.1
-  - sphinx-copybutton=0.5.0
+  - sphinx=6.1
+  - sphinx_rtd_theme=1.2
+  - sphinx-copybutton=0.5.1
   - sphinxcontrib-httpdomain=1.8.1
   - coverage=6.5.0
   - flake8=5.0.4
   - flake8-quotes=3.3.1
   - flake8-docstrings=1.6.0
-  - mypy=0.991
+  - mypy=1.1
   - pytest=7.1.3
   - pytest-cov=4.0.0
   - pytest-mock=3.10.0
   - pytest-django=4.5.2
   - pytest-doctestplus=0.12.1
+  - moto
   - pylint=2.15.7
-  - moto=4.0.11
   - pandas-stubs=1.5.2.221124
   - django-stubs=1.13.0
   - types-pyyaml=6.0.12.2
@@ -40,7 +40,5 @@ dependencies:
   - pip=22.3.1
   - pip:
     - sphinx-autorun==1.1.1
-    - sphinx-copybutton==0.5.0
-    - sphinx-rtd-theme==1.0.0
     - rangehttpserver==1.2.0
     - sphinxcontrib-video==0.0.1.dev3
