Mopup mypy error.
Mopup mypy errors.

Logging added for pedigree fields.

Mop up some mypy errors.

--- a/mypy.ini
+++ b/mypy.ini
@@ -5,6 +5,17 @@ check_untyped_defs = False
 # disable notes messages for not checking untyped defs. Remove this if you set check_untyped_defs to True.
 disable_error_code = annotation-unchecked
 
+# files = dae/dae, wdae/wdae
+
+exclude = (?x)(
+    ^dae/setup\.py$
+    | ^wdae/setup\.py$
+    | ^dae_conftests/setup\.py$
+    | ^dae/dae/docs/conf\.py$
+    | ^dae/conftest\.py$
+    | ^wdae/wdae/docs/conf\.py$
+  )
+
 [mypy-matplotlib.*]
 ignore_missing_imports = True
 
@@ -75,4 +86,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-raven.*]
+ignore_missing_imports = True
+
+[mypy-oauth2_provider.*]
 ignore_missing_imports = True
