Mop up lint errors.

--- a/mypy.ini
+++ b/mypy.ini
@@ -90,3 +90,6 @@ ignore_missing_imports = True
 
 [mypy-oauth2_provider.*]
 ignore_missing_imports = True
+
+[mypy-sklearn.*]
+ignore_missing_imports = True
