Fix `sge_small` named cluster to have "-V" extra job argument.

--- a/dae/dae/dask/named_cluster.yaml
+++ b/dae/dae/dask/named_cluster.yaml
@@ -29,6 +29,8 @@ dae_named_cluster:
         cores: 1
         memory: 1GB
         log_directory: ./.sge_worker_logs
+        job_extra_directives:
+        - "-V"
     - name: sge
       type: sge
       number_of_threads: 150
