--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python==3.9.12
+python==3.9
 importlib_metadata==4.11.3
 pysam==0.20.0
 samtools==1.15.1
@@ -13,51 +13,53 @@ matplotlib-base==3.5.1
 seaborn==0.12.1
 pandas==1.5.2
 pyarrow==10.0.1
-fsspec==2022.11.0
-aiohttp==3.8.3
+fsspec==2023.3
+aiohttp==3.8.4
 python-box==6.0.2
 setuptools==65.6.3
 sqlalchemy==1.4.40
-sqlite==3.39.2
-django==4.1.7
-django-cors-headers==3.13.0
-djangorestframework==3.13.1
-django-oauth-toolkit==2.2.0
+sqlite==3.40.1
+django==4.2.1
+django-cors-headers==4.0
+djangorestframework==3.14
+django-oauth-toolkit==2.2
 deprecation==2.1.0
 toml==0.10.2
 cerberus==1.3.4
 jinja2==3.1.2
-snakemake-minimal==7.18.2
+snakemake-minimal==7.24
 ijson==3.1.4
-dask==2022.12.0
-markdown2==2.4.0
-dask-jobqueue==0.8.1
-dask-kubernetes==2022.12.0
-s3fs==2022.11.0
+s3fs==2023.3
 openjdk==8.0.312
 hadoop==3.1.2
 impyla==0.17.0
 thriftpy2==0.4.14
 thrift==0.16.0
+dask==2023.3
+toolz==0.12.0
+markdown2==2.4.0
+python-duckdb==0.7.1
+sentry-sdk==1.18.0
+dask-jobqueue==0.8.1
+dask-kubernetes==2023.3
 bump2version==1.0.1
-sphinx==5.3.0
-sphinx_rtd_theme==1.1.1
-sphinx-copybutton==0.5.0
+sphinx==6.1
+sphinx_rtd_theme==1.2
+sphinx-copybutton==0.5.1
 sphinxcontrib-httpdomain==1.8.1
 coverage==6.5.0
 flake8==5.0.4
 flake8-quotes==3.3.1
 flake8-docstrings==1.6.0
-mypy==0.991
-pytest==7.1.3
+mypy==1.3
+pytest==7.3
 pytest-cov==4.0.0
 pytest-mock==3.10.0
 pytest-django==4.5.2
 pytest-doctestplus==0.12.1
 pylint==2.15.7
-moto==4.0.11
 pandas-stubs==1.5.2.221124
-django-stubs==1.13.0
+django-stubs==4.2
 types-pyyaml==6.0.12.2
 types-setuptools==65.6.0.2
 sqlalchemy-stubs==0.4
@@ -67,7 +69,5 @@ types-requests==2.27.30
 bandit==1.7.4
 pip==22.3.1
 sphinx-autorun===1.1.1
-sphinx-copybutton===0.5.0
-sphinx-rtd-theme===1.0.0
 rangehttpserver===1.2.0
 sphinxcontrib-video===0.0.1.dev3
