Experiments with calendar versioning.

--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -37,6 +37,8 @@ dependencies:
   - types-requests=2.27.30
   - bandit=1.7.4
   - pip=22.3.1
+  - invoke=2.1
+  - gitpython=3.1
   - pip:
     - sphinx-autorun==1.1.1
     - rangehttpserver==1.2.0
