--- a/mypy.ini
+++ b/mypy.ini
@@ -93,3 +93,9 @@ ignore_missing_imports = True
 
 [mypy-sklearn.*]
 ignore_missing_imports = True
+
+[mypy-bumpversion.*]
+ignore_missing_imports = True
+
+[mypy-invoke.*]
+ignore_missing_imports = True
