--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 current_version = 2023.06.0dev0
-parse = (?P<year>2[0-1]\d{2})\.(?P<month>\d\d?)\.(?P<minor>\d+)((?P<modifier>(dev|rc|release))(?P<micro>\d+))?
+parse = (?P<year>2[0-1]\d{2})\.(?P<month>\d\d?)\.(?P<minor>\d+)((?P<modifier>(dev|rc))(?P<micro>\d+))?
 serialize =
     {year}.{month}.{minor}{modifier}{micro}
     {year}.{month}.{minor}
