--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,16 +1,15 @@
 [bumpversion]
-current_version = 2023.06.0dev0
+current_version = 2023.6.0.dev0
 parse = (?P<year>2[0-1]\d{2})\.(?P<month>\d\d?)\.(?P<minor>\d+)((?P<modifier>(dev|rc))(?P<micro>\d+))?
-serialize =
-    {year}.{month}.{minor}{modifier}{micro}
-    {year}.{month}.{minor}
+serialize = 
+	{year}.{month}.{minor}{modifier}{micro}
+	{year}.{month}.{minor}
 commit = True
 tag = True
-# push = True
 
 [bumpversion:part:modifier]
 optional_value = release
-values =
-    dev
-    rc
-    release
+values = 
+	dev
+	rc
+	release
