--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 2023.6.0rc0
+current_version = 2023.6.0dev0
 parse = (?P<year>2[0-1]\d{2})\.(?P<month>\d\d?)\.(?P<minor>\d+)((?P<modifier>(dev|rc))(?P<micro>\d+))?
 serialize = 
 	{year}.{month}.{minor}{modifier}{micro}
@@ -13,3 +13,14 @@ values =
 	dev
 	rc
 	release
+
+
+[bumpversion:file:VERSION]
+
+[bumpversion:file:./dae/setup.py]
+
+[bumpversion:file:./dae/dae/__version__.py]
+
+[bumpversion:file:./wdae/setup.py]
+
+[bumpversion:file:./wdae/wdae/__version__.py]
