--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
-current_version = 2023.6.0dev0
-parse = (?P<year>2[0-1]\d{2})\.(?P<month>\d\d?)\.(?P<minor>\d+)((?P<modifier>(dev|rc))(?P<micro>\d+))?
+current_version = 2023.6.0.dev0
+parse = (?P<year>2[0-1]\d{2})\.(?P<month>\d\d?)\.(?P<minor>\d+)((?P<modifier>(\.?dev|rc))(?P<micro>\d+))?
 serialize = 
 	{year}.{month}.{minor}{modifier}{micro}
 	{year}.{month}.{minor}
