Enable stricter options

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,9 +1,17 @@
 [mypy]
 warn_return_any = True
 warn_redundant_casts = True
-check_untyped_defs = False
 # disable notes messages for not checking untyped defs. Remove this if you set check_untyped_defs to True.
 disable_error_code = annotation-unchecked
+
+warn_unused_configs = True
+warn_redundant_casts = True
+warn_unused_ignores = True
+
+strict_equality = True
+strict_concatenate = True
+
+check_untyped_defs = True
 
 # files = dae/dae, wdae/wdae
 
