Remove redundant mypy option.

--- a/mypy.ini
+++ b/mypy.ini
@@ -13,7 +13,7 @@ strict_concatenate = True
 check_untyped_defs = True
 
 ; disallow_untyped_calls = True
-disallow_incomplete_defs = True
+; disallow_incomplete_defs = True
 disallow_untyped_defs = True
 
 # files = dae/dae, wdae/wdae
