Experiment with versioneer.

--- a/mypy.ini
+++ b/mypy.ini
@@ -110,3 +110,6 @@ ignore_missing_imports = True
 
 [mypy-invoke.*]
 ignore_missing_imports = True
+
+[mypy-versioneer.*]
+ignore_missing_imports = True
