--- a/wdae/setup.cfg
+++ b/wdae/setup.cfg
@@ -1,1 +1,23 @@
-../setup.cfg
+[metadata]
+license_files = ['LICENSE']
+
+[bdist_wheel]
+universal = 1
+
+[flake8]
+exclude = old,*tmp*,*temp*,data-hg19*,build,docs,migrations
+max-complexity = 15
+inline-quotes=double
+docstring-quotes=double
+multiline-quotes=double
+docstring-convention=pep257
+ignore = D100,D101,D102,D103,D104,D105,D106,D107,W503
+
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = wdae/_version.py
+versionfile_build = wdae/_version.py
+tag_prefix =
+parentdir_prefix =
