--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -10,7 +10,7 @@ channels:
 dependencies:
   - dask-jobqueue=0.8.1
   - dask-kubernetes=2023.3
-  - bump2version=1.0.1
+  - versioneer=0.28
   - sphinx=6.1
   - sphinx_rtd_theme=1.2
   - sphinx-copybutton=0.5.1
