--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,10 @@ pyarrow==10.0.1
 fsspec==2023.3
 aiohttp==3.8.4
 python-box==6.0.2
-setuptools==65.6.3
+setuptools==67
 sqlalchemy==1.4.40
 sqlite==3.40.1
-django==4.2.1
+django==4.2
 django-cors-headers==4.0
 djangorestframework==3.14
 django-oauth-toolkit==2.2
@@ -42,7 +42,7 @@ python-duckdb==0.7.1
 sentry-sdk==1.18.0
 dask-jobqueue==0.8.1
 dask-kubernetes==2023.3
-bump2version==1.0.1
+versioneer==0.28
 sphinx==6.1
 sphinx_rtd_theme==1.2
 sphinx-copybutton==0.5.1
@@ -59,15 +59,17 @@ pytest-django==4.5.2
 pytest-doctestplus==0.12.1
 pylint==2.15.7
 pandas-stubs==1.5.2.221124
-django-stubs==4.2
+django-stubs==4.2.1
 types-pyyaml==6.0.12.2
-types-setuptools==65.6.0.2
+types-setuptools==67
 sqlalchemy-stubs==0.4
 types-toml==0.10.3
 types-python-dateutil==2.8.9
 types-requests==2.27.30
 bandit==1.7.4
-pip==22.3.1
+pip==23
+invoke==2.1
+gitpython==3.1
 sphinx-autorun===1.1.1
 rangehttpserver===1.2.0
 sphinxcontrib-video===0.0.1.dev3
