Fixing use of versioneer for gpf/wdae.

--- a/wdae/setup.cfg
+++ b/wdae/setup.cfg
@@ -12,3 +12,11 @@ docstring-quotes=double
 multiline-quotes=double
 docstring-convention=pep257
 ignore = D100,D101,D102,D103,D104,D105,D106,D107,W503
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = wdae/wdae/_version.py
+versionfile_build = wdae/wdae/_version.py
+tag_prefix = ''
+parentdir_prefix = ''
