all schema1 tests switched to integration testing framework.

--- a/dae/pytest.ini
+++ b/dae/pytest.ini
@@ -5,3 +5,5 @@ markers =
     impala: mark test to run only for impala genotype storage
     impala2: mark test to run only for impala2 genotype storage
     inmemory: mark test to run only for inmemory genotype storage
+    gcp: mark test to run only for gcp genotype storage
+    duckdb: mark test to run only for duckdb genotype storage
