--- a/dae_conftests/dae_conftests/tests/fixtures/studies/iossifov_we2014_test/iossifov_we2014_test.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/iossifov_we2014_test/iossifov_we2014_test.conf
@@ -16,11 +16,7 @@ status.default = {id = "unspecified", name = "unspecified", values = ["unspecifi
 status.sources = [{from = "pedigree", source = "status"}]
 
 [genotype_storage]
-id = "genotype_impala_backends"
-
-[genotype_storage.tables] 
-pedigree = "iossifov_we2014_test_pedigree"
-variants = "iossifov_we2014_test_variants"
+id = "test_duckdb_storage"
 
 [denovo_gene_sets]
 enabled = false
