--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,13 @@
 version: "3.9"
 services:
     
-  impala:
-    image: seqpipe/seqpipe-docker-impala:latest
-    hostname: impala
-    restart: "no"
-    ports:
-      - "21050:21050"
-      - "8020:8020"
+  # impala:
+  #   image: seqpipe/seqpipe-docker-impala:latest
+  #   hostname: impala
+  #   restart: "no"
+  #   ports:
+  #     - "21050:21050"
+  #     - "8020:8020"
 
   mail:
     image: mailhog/mailhog
@@ -22,8 +22,6 @@ services:
       dockerfile: Dockerfile
       args:
         REGISTRY: "registry.seqpipe.org/"
-    depends_on:
-      - impala
     restart: "no"
     environment:
       DAE_DB_DIR: /wd/data/data-hg19-local
@@ -43,7 +41,6 @@ services:
       args:
         REGISTRY: "registry.seqpipe.org/"
     depends_on:
-      - impala
       - setup
     ports:
       - "21010:21010"
