--- a/dae_conftests/dae_conftests/tests/fixtures/studies/SVMergingStudy1/test.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/SVMergingStudy1/test.conf
@@ -7,11 +7,7 @@ study_type = ["WE"]
 selected_person_set_collections = ["phenotype", "status"]
 
 [genotype_storage]
-id = "genotype_impala_backends"
-
-[genotype_storage.tables] 
-pedigree = "svmergingstudy1_pedigree"
-variants = "svmergingstudy1_variants"
+id = "test_duckdb_storage"
 
 [denovo_gene_sets]
 enabled = false
