--- a/integration/remote/data/gpf_instance.yaml
+++ b/integration/remote/data/gpf_instance.yaml
@@ -7,7 +7,8 @@ genotype_storage:
   storages:
   - id: remote_duckdb
     storage_type: duckdb
-    studies_path: "genotype_storage/remote_duckdb"
+    studies_dir: "genotype_storage/remote_duckdb"
+    base_dir: "%(wd)s"
 
 phenotype_data:
   dir: "pheno"
