--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -22,6 +22,7 @@ dependencies:
   - mypy=1.4
   - pytest=7.4
   - pytest-cov=4.1.0
+  - pytest-xdist=3.3
   - pytest-mock=3.11.1
   - pytest-django=4.5.2
   - pytest-doctestplus=0.12.1
