--- a/mypy.ini
+++ b/mypy.ini
@@ -115,3 +115,6 @@ ignore_missing_imports = True
 
 [mypy-versioneer.*]
 ignore_missing_imports = True
+
+[mypy-ijson.*]
+ignore_missing_imports = True
