--- a/mypy.ini
+++ b/mypy.ini
@@ -27,6 +27,8 @@ exclude = (?x)(
     | ^wdae/wdae/docs/conf\.py$
   )
 
+plugins = numpy.typing.mypy_plugin
+
 [mypy-matplotlib.*]
 ignore_missing_imports = True
 
