--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,19 @@ services:
   #     - "21050:21050"
   #     - "8020:8020"
 
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
+    image: localstack/localstack
+    ports:
+      - "127.0.0.1:4566:4566"            # LocalStack Gateway
+      - "127.0.0.1:4510-4559:4510-4559"  # external services port range
+    # environment:
+    #   # - DEBUG=${DEBUG-}
+    #   - DOCKER_HOST=unix:///var/run/docker.sock
+    # volumes:
+    #   # - "${LOCALSTACK_VOLUME_DIR:-./.test_volume}:/var/lib/localstack"
+    #   - "/var/run/docker.sock:/var/run/docker.sock"
+
   mail:
     image: mailhog/mailhog
     hostname: mail
@@ -26,9 +39,9 @@ services:
     environment:
       DAE_DB_DIR: /wd/data/data-hg19-local
       GRR_DEFINITION_FILE: /wd/integration/grr_definition.yaml
-      DAE_IMPALA_HOST: impala
-      DAE_HDFS_HOST: impala
-      TEST_REMOTE_HOST: gpfremote
+      DAE_IMPALA_HOST: localhost
+      DAE_HDFS_HOST: localhost
+      TEST_REMOTE_HOST: localhost
     volumes:
       - .:/wd
     entrypoint: /wd/integration/local/entrypoint.sh
@@ -47,9 +60,9 @@ services:
     environment:
       DAE_DB_DIR: /wd/data/data-hg19-remote
       GRR_DEFINITION_FILE: /wd/integration/grr_definition.yaml
-      DAE_IMPALA_HOST: impala
-      DAE_HDFS_HOST: impala
-      TEST_REMOTE_HOST: gpfremote
+      # DAE_IMPALA_HOST: impala
+      # DAE_HDFS_HOST: impala
+      # TEST_REMOTE_HOST: gpfremote
     volumes:
       - .:/wd
 
