--- a/environment.yml
+++ b/environment.yml
@@ -9,12 +9,14 @@ channels:
   - conda-forge
   - bioconda
   - iossifovlab
+  - defaults
 dependencies:
   - python=3.9
-  - importlib_metadata=4.11.3
-  - pysam=0.20.0
-  - samtools=1.15.1
-  - htslib=1.15.1
+  - importlib_metadata=6.8
+  - pysam=0.21.0
+  - samtools=1.17
+  - htslib=1.17
+  - bcftools=1.17
   - pyliftover=0.4
   - lark-parser=0.6.7
   - networkx=2.8.5
@@ -25,8 +27,9 @@ dependencies:
   - seaborn=0.12.1
   - pandas=1.5.2
   - pyarrow=10.0.1
-  - fsspec=2023.3
-  - aiohttp=3.8.5
+  - fsspec=2023.6
+  - s3fs=2023.6
+  - dask=2023.8
   - python-box=6.0.2
   - setuptools=67
   - sqlalchemy=1.4.40
@@ -40,8 +43,6 @@ dependencies:
   - cerberus=1.3.4
   - jinja2=3.1.2
   - ijson=3.2
-  - s3fs=2023.3
-  - dask=2023.3
   - toolz=0.12.0
   - markdown2=2.4.0
   - python-duckdb=0.8.1
