Turn S3 and HTTP tests into optional tests.
Added flags to enable S3 and HTTP testing.

--- a/dae/pytest.ini
+++ b/dae/pytest.ini
@@ -1,9 +1,15 @@
 [pytest]
 markers =
-    fixture_repo: marks tests that use the fixture_repo (deselect with '-m "not fixture_repo"')
-    internet: marks tests that depend on having an internet conenction (deselect with '-m "not fixture_repo"')
-    impala: mark test to run only for impala genotype storage
-    impala2: mark test to run only for impala2 genotype storage
-    inmemory: mark test to run only for inmemory genotype storage
-    gcp: mark test to run only for gcp genotype storage
-    duckdb: mark test to run only for duckdb genotype storage
+    gs_impala: mark test to run only for impala genotype storage
+    gs_impala2: mark test to run only for impala2 genotype storage
+    gs_inmemory: mark test to run only for inmemory genotype storage
+    gs_gcp: mark test to run only for gcp genotype storage
+    gs_duckdb: mark test to run only for duckdb genotype storage
+    gs_schema2: mark tests to run only for schema2 genotype storages
+    grr_s3: mark test to run for S3 grr protocol
+    grr_http: mark test to run for HTTP GRR protocol
+    grr_inmemory: mark test to run for inmemory GRR protocol
+    grr_rw: mark test to run for RW protocols (s3, file, inmemory)
+    grr_ro: mark test to run for RO protocols (http/https)
+    grr_full: mark test to run for full RW protocols (s3, file)
+    grr_tabix: mark test to run for GRR protocols that support tabix (file, s3, http)
