Optimize dataset permissions

--- a/mypy.ini
+++ b/mypy.ini
@@ -27,7 +27,9 @@ exclude = (?x)(
     | ^wdae/wdae/docs/conf\.py$
   )
 
-plugins = numpy.typing.mypy_plugin
+plugins = 
+    numpy.typing.mypy_plugin
+    mypy_django_plugin.main
 
 [mypy-matplotlib.*]
 ignore_missing_imports = True
