--- a/mypy.ini
+++ b/mypy.ini
@@ -27,9 +27,7 @@ exclude = (?x)(
     | ^wdae/wdae/docs/conf\.py$
   )
 
-plugins = 
-    numpy.typing.mypy_plugin
-    mypy_django_plugin.main
+plugins = numpy.typing.mypy_plugin
 
 [mypy-matplotlib.*]
 ignore_missing_imports = True
