--- a/mypy.ini
+++ b/mypy.ini
@@ -27,7 +27,10 @@ exclude = (?x)(
     | ^wdae/wdae/docs/conf\.py$
   )
 
-plugins = numpy.typing.mypy_plugin
+plugins = numpy.typing.mypy_plugin, mypy_django_plugin.main
+
+[mypy.plugins.django-stubs]
+django_settings_module = "wdae.test_settings"
 
 [mypy-matplotlib.*]
 ignore_missing_imports = True
