--- a/integration/remote/data/defaultConfiguration.conf
+++ b/integration/remote/data/defaultConfiguration.conf
@@ -118,7 +118,7 @@ effect.name = "effect"
 effect.columns = ["worst_effect", "genes"]
 
 gene_scores.name = "vulnerability/intolerance"
-gene_scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
+gene_scores.columns = ["lgd_rank", "rvis_rank", "pli"]
 
 family.name = "family"
 family.columns = ["family_id", "study"]
@@ -159,9 +159,9 @@ rvis_rank.name="RVIS rank"
 rvis_rank.source = "RVIS_rank"
 rvis_rank.format="%%d"
 
-pli_rank.name="pLI rank"
-pli_rank.source="pLI_rank"
-pli_rank.format="%%d"
+pli.name="pLI"
+pli.source="pLI"
+pli.format="%%.4f"
 
 family_id.name = "family id"
 family_id.source = "family"
