WIP: Switch to using enrichment background resources.

--- a/dae_conftests/dae_conftests/tests/fixtures/defaultConfiguration.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/defaultConfiguration.conf
@@ -166,20 +166,24 @@ pheno.sources = [
 [enrichment]
 enabled = false
 selected_person_set_collections = ["phenotype"]
-selected_background_values = ["coding_len_background_model", "samocha_background_model"]
-# background.synonymous_background_model.name = "synonymous_background_model"
-# background.synonymous_background_model.desc = "Synonymous Background Model"
-background.coding_len_background_model.file = "enrichment/codingLenBackgroundModel.csv"
-background.coding_len_background_model.name = "coding_len_background_model"
-background.coding_len_background_model.kind = "coding_len_background_model"
-background.coding_len_background_model.desc = "Coding Len Background Model"
+selected_background_models = [
+    "enrichment/coding_len_testing",
+    "enrichment/samocha_testing"
+]
+default_background_model = "enrichment/coding_len_testing"
 
-background.samocha_background_model.file = "enrichment/samochaBackgroundModel.csv"
-background.samocha_background_model.name = "samocha_background_model"
-background.samocha_background_model.kind = "samocha_background_model"
-background.samocha_background_model.desc = "Samocha Background Model"
+# # background.synonymous_background_model.name = "synonymous_background_model"
+# # background.synonymous_background_model.desc = "Synonymous Background Model"
+# background.coding_len_background_model.file = "enrichment/codingLenBackgroundModel.csv"
+# background.coding_len_background_model.name = "coding_len_background_model"
+# background.coding_len_background_model.kind = "coding_len_background_model"
+# background.coding_len_background_model.desc = "Coding Len Background Model"
 
-default_background_model = "coding_len_background_model"
+# background.samocha_background_model.file = "enrichment/samochaBackgroundModel.csv"
+# background.samocha_background_model.name = "samocha_background_model"
+# background.samocha_background_model.kind = "samocha_background_model"
+# background.samocha_background_model.desc = "Samocha Background Model"
+
 selected_counting_values = ["enrichment_events_counting", "enrichment_gene_counting"]
 counting.enrichment_events_counting.name = "enrichment_events_counting"
 counting.enrichment_events_counting.desc = "Enrichment Events Counting"
