--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,27 @@
 python==3.9
-importlib_metadata==4.11.3
-pysam==0.20.0
-samtools==1.15.1
-htslib==1.15.1
+importlib_metadata==6.8
+pysam==0.21
+htslib==1.17
+samtools==1.17
+bcftools==1.17
 pyliftover==0.4
 lark-parser==0.6.7
 networkx==2.8.5
-numpy==1.23.1
+numpy==1.26
 scipy==1.10.0
 scikit-learn==1.1.2
 matplotlib-base==3.5.1
-seaborn==0.12.1
-pandas==1.5.2
-pyarrow==10.0.1
-fsspec==2023.3
-aiohttp==3.8.5
-python-box==6.0.2
+seaborn==0.13
+pandas==2.1.1
+pyarrow==13.0.0
+fsspec==2023.9.0
+s3fs==2023.9
+dask==2023.8
+python-box==7.1
 setuptools==67
-sqlalchemy==1.4.40
-sqlite==3.40.1
-django==4.2.3
+sqlalchemy==2.0.21
+sqlite==3.43
+django==4.2.7
 django-cors-headers==4.0
 djangorestframework==3.14
 django-oauth-toolkit==2.2
@@ -27,10 +29,8 @@ deprecation==2.1.0
 toml==0.10.2
 cerberus==1.3.4
 jinja2==3.1.2
-ijson==3.1.4
-s3fs==2023.3
-dask==2023.3
+ijson==3.2
 toolz==0.12.0
 markdown2==2.4.0
-python-duckdb==0.8.1
+python-duckdb==0.9.1
 sentry-sdk==1.18.0
