Fix and update wdae enrichment tests.

--- a/integration/remote/data/defaultConfiguration.conf
+++ b/integration/remote/data/defaultConfiguration.conf
@@ -291,23 +291,13 @@ gene_sets_names = ["LGDs", "LGDs.Male", "LGDs.Female", "LGDs.Recurrent", "LGDs.S
 
 [enrichment]
 enabled = false
-selected_background_values = ["coding_len_background_model", "samocha_background_model"]
+selected_background_models = [
+    "hg38/enrichment/coding_length_ref_gene_v20170601", 
+    "enrichment/samocha_background"
+]
 selected_person_set_collections = ["status"]
 
-background.synonymous_background_model.name = "synonymousBackgroundModel"
-background.synonymous_background_model.desc = "Background model based on synonymous variants in transmitted"
-
-background.coding_len_background_model.file = "%($DAE_DB_DIR)s/enrichment/background-model-coding-len-in-target.csv"
-background.coding_len_background_model.name = "coding_len_background_model"
-background.coding_len_background_model.kind = "coding_len_background_model"
-background.coding_len_background_model.desc = "Genes coding lenght background model"
-
-background.samocha_background_model.file = "%($DAE_DB_DIR)s/enrichment/background-samocha-et-al.csv"
-background.samocha_background_model.name = "samocha_background_model"
-background.samocha_background_model.kind = "samocha_background_model"
-background.samocha_background_model.desc = "Background model described in Samocha et al"
-
-default_background_model = "coding_len_background_model"
+default_background_model = "hg38/enrichment/coding_length_ref_gene_v20170601"
 
 selected_counting_values = ["enrichment_events_counting", "enrichment_gene_counting"]
 
