Fix handling of pheno db measures in response.

--- a/dae_conftests/dae_conftests/tests/fixtures/studies/comp/comp.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/comp/comp.conf
@@ -47,3 +47,31 @@ params.vcf_omission_mode = "ignore"
 
 [genotype_browser]
 enabled = true
+
+preview_columns = [ 
+  "family",
+  "variant",
+  "genotype",
+  "effect",
+  "gene_scores",
+  "mpc_cadd",
+  "freq",
+  "pheno_measures",
+]
+
+
+[genotype_browser.column_groups]
+pheno_measures.name = "Measusers"
+pheno_measures.columns = ["pheno_age", "pheno_iq"]
+
+
+[genotype_browser.columns.phenotype]
+pheno_age.role = "prb"
+pheno_age.source = "i1.age"
+pheno_age.format = "%%.3f"
+pheno_age.name = "Age"
+
+pheno_iq.role = "prb"
+pheno_iq.source = "i1.iq"
+pheno_iq.format = "%%.3f"
+pheno_iq.name = "Iq"
