Tune counting models and background models config.

--- a/dae_conftests/dae_conftests/tests/fixtures/defaultConfiguration.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/defaultConfiguration.conf
@@ -184,10 +184,12 @@ default_background_model = "enrichment/coding_len_testing"
 # background.samocha_background_model.kind = "samocha_background_model"
 # background.samocha_background_model.desc = "Samocha Background Model"
 
-selected_counting_values = ["enrichment_events_counting", "enrichment_gene_counting"]
-counting.enrichment_events_counting.name = "enrichment_events_counting"
+selected_counting_models = ["enrichment_events_counting", "enrichment_gene_counting"]
+counting.enrichment_events_counting.id = "enrichment_events_counting"
+counting.enrichment_events_counting.name = "enrichment_events_counting name"
 counting.enrichment_events_counting.desc = "Enrichment Events Counting"
-counting.enrichment_gene_counting.name = "enrichment_gene_counting"
+counting.enrichment_gene_counting.id = "enrichment_gene_counting"
+counting.enrichment_gene_counting.name = "enrichment_gene_counting name"
 counting.enrichment_gene_counting.desc = "Enrichment Gene Counting"
 default_counting_model = "enrichment_gene_counting"
 effect_types = ["LGDs", "missense", "synonymous"]
