--- a/integration/local/data/defaultConfiguration.conf
+++ b/integration/local/data/defaultConfiguration.conf
@@ -299,11 +299,13 @@ selected_person_set_collections = ["status"]
 
 default_background_model = "hg38/enrichment/coding_length_ref_gene_v20170601"
 
-selected_counting_values = ["enrichment_events_counting", "enrichment_gene_counting"]
+selected_counting_models = ["enrichment_events_counting", "enrichment_gene_counting"]
 
+counting.enrichment_events_counting.id = "enrichment_events_counting"
 counting.enrichment_events_counting.name = "enrichment_events_counting"
 counting.enrichment_events_counting.desc = "Counting events"
 
+counting.enrichment_gene_counting.id = "enrichment_gene_counting"
 counting.enrichment_gene_counting.name = "enrichment_gene_counting"
 counting.enrichment_gene_counting.desc = "Counting affected genes"
 
