--- a/environment.yml
+++ b/environment.yml
@@ -12,10 +12,10 @@ channels:
 dependencies:
   - python=3.9
   - importlib_metadata=6.8
-  - pysam=0.21
-  - htslib=1.17
-  - samtools=1.17
-  - bcftools=1.17
+  - pysam=0.22
+  - htslib=1.18
+  - samtools=1.18
+  - bcftools=1.18
   - pyliftover=0.4
   - lark-parser=0.6.7
   - networkx=2.8.5
@@ -24,7 +24,7 @@ dependencies:
   - scikit-learn=1.1.2
   - matplotlib-base=3.5.1
   - seaborn=0.13
-  - pandas=2.1.1
+  - pandas=2.1.3
   - pyarrow=14.0.1
   - fsspec=2023.9.0
   - s3fs=2023.9
@@ -44,5 +44,6 @@ dependencies:
   - ijson=3.2
   - toolz=0.12.0
   - markdown2=2.4.0
-  - python-duckdb=0.9.1
+  - python-duckdb=0.9.2
+  - polars=0.19.17
   - sentry-sdk=1.18.0
