--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 warn_return_any = True
 # disable notes messages for not checking untyped defs. Remove this if you set check_untyped_defs to True.
-disable_error_code = annotation-unchecked
+# disable_error_code = annotation-unchecked
 
 warn_unused_configs = True
 warn_redundant_casts = True
@@ -12,8 +12,8 @@ strict_concatenate = True
 
 check_untyped_defs = True
 
-; disallow_untyped_calls = True
-; disallow_incomplete_defs = True
+# disallow_untyped_calls = True
+# disallow_incomplete_defs = True
 disallow_untyped_defs = True
 
 # files = dae/dae, wdae/wdae
