--- a/environment.yml
+++ b/environment.yml
@@ -45,5 +45,6 @@ dependencies:
   - toolz=0.12.0
   - markdown2=2.4.0
   - python-duckdb=0.9.2
+  - sqlglot=20.4
   - polars=0.19.17
   - sentry-sdk=1.18.0
