--- a/mypy.ini
+++ b/mypy.ini
@@ -127,3 +127,6 @@ ignore_missing_imports = True
 
 [mypy-silk.*]
 ignore_missing_imports = True
+
+[mypy-monkeytype.*]
+ignore_missing_imports = True
