--- a/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
@@ -1,6 +1,8 @@
 vars:
   instance_id: test_data
 
+instance_id: '%(instance_id)s'
+
 reference_genome:
   resource_id: "hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome"
 
