--- a/dae/dae/common_reports/tests/fixtures/gpf_instance.yaml
+++ b/dae/dae/common_reports/tests/fixtures/gpf_instance.yaml
@@ -1,6 +1,8 @@
 vars:
   wd: "."
 
+instance_id: "test_instance"
+
 reference_genome:
   resource_id: "hg19/genomes/GATK_ResourceBundle_5777_b37_phiX174"
 
