--- a/integration/remote/data/gpf_instance.yaml
+++ b/integration/remote/data/gpf_instance.yaml
@@ -8,7 +8,7 @@ genotype_storage:
 
   storages:
   - id: remote_duckdb
-    storage_type: duckdb
+    storage_type: duckdb2
     studies_dir: "genotype_storage/remote_duckdb"
     base_dir: "%(wd)s"
 
