--- a/requirements.txt
+++ b/requirements.txt
@@ -28,10 +28,11 @@ django-oauth-toolkit==2.2
 deprecation==2.1.0
 toml==0.10.2
 cerberus==1.3.4
-jinja2==3.1.2
+jinja2==3.1.3
 ijson==3.2
 toolz==0.12.0
 markdown2==2.4.0
 python-duckdb==0.9.2
+sqlglot==20.4
 polars==0.19.17
 sentry-sdk==1.18.0
