--- a/mypy.ini
+++ b/mypy.ini
@@ -125,6 +125,9 @@ ignore_missing_imports = True
 [mypy-s3fs.*]
 ignore_missing_imports = True
 
+[mypy-cloudpickle.*]
+ignore_missing_imports = True
+
 [mypy-silk.*]
 ignore_missing_imports = True
 
