--- a/impala2_storage/setup.cfg
+++ b/impala2_storage/setup.cfg
@@ -6,8 +6,8 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = impala_storage/_version.py
-versionfile_build = impala_storage/_version.py
+versionfile_source = impala2_storage/_version.py
+versionfile_build = impala2_storage/_version.py
 tag_prefix = ''
 parentdir_prefix = ''
 
